static/css/audacious.scss
@charset "UTF-8";
@import "reset"; 

/*
  Copyright K.Q. Dreger
  Update: AF 1.18
*/ 

 
// SPACING

$sidebar-width: 12rem;   
$column-width: 32rem;  
$column-width: 42rem;  
$max-width: $sidebar-width + $column-width; 
$line-height: 1.65em; 
$letter-spacing: .12em; 

// FONTS

$sans: -apple-system, 'BlinkMacSystemFont', 'Helvetica Neue', 'Helvetica', Arial, sans-serif;
$serif: $sans; 
//$serif: "Charter", "Georgia", Times, serif; 


// COLORS

$link: #645394; // MDS Purple
$link: #B0976D; // Old Gold
$link: #FFDC00; // Light Orangish Red
$link: #0ed3c8; // Tealicious
$link: #FE3366; // Think Pink
$link: #ff8600; // Quantum Gold 
$link: #795AE1; // Deep Purple
$link: #00BBBB; // Soft Teal
$link: #FF725C; // Light Red
$link: #1968FF; // Bright Blue
$link: #6B8EB7; // Jeans

$copy: #4a4b4c; // Also: RGBA(52, 60, 71, 1);
$faded: #777; 
$light-gray: #c1c2c3; 
$light-light-gray: #ddd; 
$gray: #8a8b8c; 
$bg: #f5f7f9; 
$article-bg: white; 
$heart-color: $link; 


/*
  Start Styles
*/
 
::selection {
  background: darken($bg, 10%);
}

* {
  -moz-box-sizing: content-box;
  box-sizing: content-box; }

html {
  font-size: 16px; 
  text-rendering: optimizeLegibility;
}

body {
  line-height: $line-height;
  margin: 0;
  background: $bg; 
  color: $copy; 
  font-family: $serif; 
  font-style: normal;
}

a {
  color: $copy; 
  color: $link; 
  text-decoration: none;  
  &:hover { 
    text-decoration: underline;
//    border-bottom: solid 2px $link; 
    // border-bottom: solid 1px $copy; 
  }
}

em {
  font-style: italic; 
}

strong {
  font-weight: 700;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
pre,
img,
ul,
ol,
aside,
blockquote,
.highlighter-rouge {
  margin-bottom: 1.5em; 
}

h1,
.header,
.navigation {
  line-height: $line-height;
  text-transform: uppercase; 
  letter-spacing: $letter-spacing; 
  text-rendering: optimizeLegibility;
  font-family: $sans;
}

h1 {
  font-size: 2.25rem; 
  margin-bottom: 1.5rem; 
  line-height: 1.25em; 
  text-transform: none; 
  letter-spacing: 0px; 
}

h2 {
  margin-bottom: 1rem;
  margin-top: 2.25rem;
  font-size: 1.25rem;
  line-height: $line-height;
  font-family: $sans;
  &.link {
    margin-top: 0; 
  }
}

h3 {
  font-size: 1rem;
  margin-top: 2.25rem;
  margin-bottom: .5rem; 
  font-weight: bold; 
}

img {
  display: block;
  border-radius: 4px; 
  width: 100%; 
}

em {
  figcaption { font-style: normal; }
  img {
    width: calc(100% + 6rem);
    margin: 1rem 0 1rem -3rem; 
    border-top: solid $bg .5rem;
    border-bottom: solid $bg .5rem; 
  }
}

small {
  font-size: .875rem;
  line-height: 1em; }

ul,
ol {
  padding-left: 1.5rem; 
  margin-bottom: 1.5rem;
}

ul li {
  list-style: square; }

ol li {
  list-style: decimal; }

li {
  margin-bottom: .5em; }

hr {
  height: 1px;
  border: 0;
  border-top: 2px solid $bg; 
  margin: 1.5rem 0;
  display: block; 
}

article {
  background: $article-bg;
  position: relative;
  margin-bottom: .25rem; 
  border-radius: 4px;
  padding: 3rem 3rem;
  &:last-child { border-bottom: 0; } 
}

article:first-child {
  margin-top: 0; }

article p:last-child,
article blockquote:last-child {
  margin-bottom: 0; }



aside {
  width: 40%;
  float: right;
  margin: 0 0 1.25rem 1.25rem;
  padding: .5rem 0 0;
  font-size: .875rem;
  color: $faded;
  line-height: $line-height;
  border-top: solid 2px $bg; 
}

sup {
  margin: 0 2px 0 0;
  line-height: 1em; }

sub {
  margin: 0 0 0 2px;
  line-height: 1em;
  font-size: smaller;
  vertical-align: sub; }

code {
  padding: 0px 4px;
  border-radius: 3px; 
  background: $bg; 
  font-family: monospace; 
}

pre {
  // overflow: scroll;
  white-space: pre-wrap;
  font-size: .875rem;
  border-width: 1px;
  background: $bg; 

  border-color: #c5c6c7;
  border-style: dashed;
  padding: .5rem .5rem;
  line-height: $line-height; }

pre code {
  padding: initial;
  border: 0; }


blockquote {
  padding: 0 3rem;
  font-style: italic; 
  border-radius: 0 4px 4px 4px; 
}

blockquote strong {
  text-transform: none;
  font-size: 1rem;
  letter-spacing: 0; 
  font-family: $serif; 
  font-weight: bold; 
}

figure {
  margin-bottom: 1.5rem; 
  img { margin-bottom: .5rem; }
  figcaption { 
    font-size: .875rem; 
    line-height: $line-height;
    color: $gray; 
  }
}

.header {
  font-size: 1rem;
  padding: 3rem; 
}

.header a,
.navigation a,
h1 a {
  border-color: transparent;  
  color: $copy; 
  &:hover { 
    border-color: $copy;
    text-decoration: none; 
  }
}

.title {
  text-transform: uppercase;
  margin: 0;
  line-height: 1em;
  display: inline;
  font-weight: bold;
  font-size: 1rem; 
  letter-spacing: $letter-spacing; 
}

.byline { 
  display: inline;
  line-height: 1em;
  color: $gray; 
  a { color: $gray; }
}
.byline__slash { display: none; }

.wrapped {
  margin: 4rem auto;
  max-width: $max-width; 
}

.container {
  display: flex;
}

.sidebar {
  width: $sidebar-width; //12rem; 
  font-family: $sans; 
  flex-shrink: 0; 
  font-size: .875rem;
  line-height: $line-height;
  padding: 3rem; 
}

.sidebar figure {
	margin-bottom: 2.25rem;
	img { 
		height: auto; 
		width: 120px; 
		border-radius: 3px;
		display: block;
		margin-bottom: .5rem; 
		&:hover {
			opacity: .95;
		}
	}
}

.navigation {
  list-style: none;
  padding: 0; 
  text-transform: uppercase;
}

.navigation li {
  list-style: none; 
}


.caps,
strong,
.interview .name {
  font-size: .875em;
  line-height: 1em;
  font-family: $sans;
  text-transform: uppercase;
  letter-spacing: $letter-spacing; 
  font-weight: 500;
}

.caps {
  font-weight: normal; 
}

.archive {
  padding-left: 2.25rem;
  font-size: .875rem; 
  a { font-size: 1rem; }
  h2, li {
    color: $gray;
  }
}

.footnotes {
  font-size: .875rem;
  padding: 0;
  line-height: $line-height;
  margin-top: 0rem; 
  margin: 2.25rem 0; 
  border: solid 2px $bg; 
  > hr { display: none; }
  ol {
    padding-left: 2.25rem; 
    padding-right: 2.25rem; 
    &:before {
      content: "Footnotes"; 
      padding: 0 .5rem; 
      position: relative; 
      left: -.5rem; 
      color: $gray; 
      top: -.75rem; 
      background: white; 
    }
  }
  li {
    margin-bottom: 1em; 
  }
}


.term {
  font-weight: bold; }

.interview {
  display: block;
  margin-left: 1.5rem;
  margin-bottom: 1.5rem; }

.canonical-link {
  font-family: $sans; 
  color: $gray; 
  text-transform: uppercase; 
  letter-spacing: $letter-spacing; 
  font-size: .875rem; 
  a {
    color: $gray; 
    border: 0;
  }
  a:hover { 
    color: $copy;  
  }
}
.canonical-link--post { display: inline; }

.pagination {
  line-height: $line-height; 
  color: $gray; 
  border-radius: 4px;
  background: white;  
  padding: 3rem; 
  .caps {
    letter-spacing: $letter-spacing; 
    padding-bottom: .5rem; 
  }
}
.pagination-older {
  margin-bottom: 1.5rem; 
}

.interview h1,
.interview h2,
.interview h3,
.interview .name,
.interview strong,
.interview .name {
  margin-left: -1.5rem; }

.index-end {
  padding: 2.25rem; 
  color: $gray;
}

// .christmas-lights {
//   margin: 0; 
//   padding: 0; 
//   justify-content: space-between; 
//   display: flex; 
//   display: none; 
//   margin-bottom: 1rem; 
//   border-top: dotted 1px $light-gray; 
//   > div {
//     height: 4px; 
//     animation: glowing 3s infinite;
//     width: 4px; 
//     border-radius: 0px; 
//     background: #e02a15; 
//     box-shadow: 0 0 3px #e02a15; 
//     &:nth-child(2n) {
//       animation: glowing 4s infinite;
//       background: #15a115;
//       box-shadow: 0 0 3px #15a115; 
//       margin-top: -.25rem;  
//     }
//   }
// }

.heart {
  background-color: $heart-color;
  display: inline-block;
  height: 6px;
  margin: 0 3px;
  position: relative;
  top: 0;
  transform: rotate(-45deg);
  width: 6px;
}

.heart:before,
.heart:after {
  content: "";
  background-color: $heart-color;
  border-radius: 50%;
  height: 6px;
  position: absolute;
  width: 6px;
}

.heart:before {
  top: -3px;
  left: 0;
}

.heart:after {
  left: 3px;
  top: 0;
}

.headline-space { display: none; }
.headline-nbsp { display: none; }

@media (max-width: $max-width) {
  html {
    font-size: 16px; 
  }

  //  Used to disable orphaned headline correction on mobile
  // .headline-space { display: inline; }
  // .headline-nbsp { display: none; }

  .wrapped {
    margin: 0 auto;
    display: block;
    margin: 0 auto;
    max-width: 40rem; 
  }

  .container {
    display: block; 
  }

  .sidebar {  
    flex-shrink: initial; 
    width: initial; 
    background: $bg;
  }

  .header,
  .sidebar, {
    padding: 1.5rem 1.5rem .875rem;
    margin: 0 0; }

  .header {
    padding-bottom: 1rem; 
    background: white; 
  }
    .byline__by { display: none; }
    .byline__slash { display: inline; }
  
  .navigation-jump {
    display: block;
    float: right;
    margin-left: auto;
    margin-top: -.25rem; }

  .column {
    max-width: 100%; }
  .index-end { display: none;  }
  article, .pagination {
    padding: 2.5rem 1.5rem;
  }

  article {
    border-bottom: solid .25rem $bg; 
  }
  article:first-child {
    margin-top: 0;
  }

  blockquote {
    padding: 0 1.5rem;
  }

  aside {
    width: 100%;
    margin: 0 0 1.25rem; }

  em img {
    margin-left: 0;
    width: 100%;
    border: 0; } }

@media (max-width: 340px) {
  html {
    font-size: 16px; 
  }
  .header {
  	text-align: center; 
  }
  .byline { 
  	display: block; 
  	padding: .5rem 0; 
  }
  .byline__slash,
  .byline__by { display: none; }
}

